--- a/transport_2/App.config
+++ b/transport_2/App.config
@@ -27,6 +27,6 @@
   <connectionStrings>
     <add name="context" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=transport_2&quot;" providerName="System.Data.EntityClient" />
     <add name="transport_entity_context" connectionString="metadata=res://*/Models.transport_model.csdl|res://*/Models.transport_model.ssdl|res://*/Models.transport_model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=transport_2&quot;" providerName="System.Data.EntityClient" />
-    <add name="transportEntityContext" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.33.10;user id=zoli;database=transport_2;password=5531;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="transportEntityContext" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.33.10;user id=root;database=transport_2;password=5531;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
